--- a/prank.html
+++ b/prank.html
@@ -1,24 +1,24 @@
-<html>
+<!DOCTYPE html>
+<html lang="cs">
 <head>
+    <meta charset="UTF-8">
     <title>joky</title>
-</head>
-<body>
-    <img src="https://i.pinimg.com/originals/fc/30/db/fc30db898a2d69735735540b9198db9b.jpg?nii=t" alt="Funny Image" />
-    <style> 
+
+    <style>
+        body {
+            background-color: #22f894;
+        }
+
         img {
             display: block;
             margin-left: auto;
             margin-right: auto;
             width: 50%;
         }
-    </style> 
+    </style>
+</head>
 
-
-<style>
-    body {
-        background-color: #22f894;
-    }
-</style>
-
+<body>
+    <img src="https://i.pinimg.com/originals/fc/30/db/fc30db898a2d69735735540b9198db9b.jpg" alt="Funny Image" />
 </body>
 </html>
